MGRAPPS-49 - update tests