@@ -1,6 +1,5 @@
 package org.folio.am.utils;
 
-import static java.util.stream.Collectors.toList;
 import static org.apache.commons.collections4.CollectionUtils.emptyIfNull;
 import static org.apache.commons.collections4.CollectionUtils.isEmpty;
 
@@ -70,6 +69,6 @@ public class CollectionUtils {
   public static <T> List<T> union(Collection<T> collection1, Collection<T> collection2) {
     return Stream.concat(toStream(collection1), toStream(collection2))
       .distinct()
-      .collect(toList());
+      .toList();
   }
 }
